[package]
name = "dumb_ai"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chatglm"
path = "src/bin/chatglm/main.rs"

[[bin]]
name = "qwen2"
path = "src/bin/qwen2/main.rs"

[[bin]]
name = "stable_diffusion"
path = "src/bin/stable_diffusion/main.rs"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
hf-hub = { version = "0.3.2", features = ["tokio"] }
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
tracing-subscriber = "0.3.18"
tokenizers = "0.19.1"
tracing-chrome = "0.7.2"
serde = "1.0.203"
serde_json = "1.0.117"

candle-examples = { git = "https://github.com/huggingface/candle" }
candle-transformers = { git = "https://github.com/huggingface/candle" }
candle-nn = { git = "https://github.com/huggingface/candle", features = ["cuda"] }
candle-core = { git = "https://github.com/huggingface/candle", features = ["cuda"] }
image = "0.25.1"
